--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,5 +6,14 @@
   </head>
   <body>
     <h1>Testing</h1>
+    <section>
+      <% puppys.forEach(puppy =>{ %>
+      <h2><%= puppy.name %></h2>
+      <p><%= puppy.birthYear %></p>
+      <p><%= puppy.favoriteFood %></p>
+      <p><%= puppy.powers %></p>
+      <img src="<%= puppy.img %>" alt="" />
+      <% }) %>
+    </section>
   </body>
 </html>
