alt skal være good med main branch. skal lage jwt og session i andre branches.

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,7 +5,8 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>Testing</h1>
+    <h1>Puppies thingy magoo</h1>
+    <a href="/login">Login</a>
     <section>
       <% puppys.forEach(puppy =>{ %>
       <h2><%= puppy.name %></h2>
