--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -1,7 +1,7 @@
-<%- include('./partials/head.js') %> <%- include('./partials/header.js') %>
+<%- include('./partials/head.ejs') %> <%- include('./partials/header.ejs') %>
 
 <body>
-  <form action="/login" method="POST">
+  <form action="/signup" method="POST">
     <label for="username">Username</label>
     <input type="text" name="username" id="username" />
     <label for="">Password</label>
